# MCE

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: components.hpp  dependency.hpp  engine.hpp  mce.hpp  requests.hpp  require.hpp  scene.hpp  types.hpp  world.hpp
include/inl/: components.inl  require.inl  scene.inl  world.inl
src/: scene.cpp  world.cpp
tests/: CMakeLists.txt  Makefile
tests/include/: tests.hpp
tests/src/: main.cpp  scene.cpp  world.cpp
